Added paddle sticker

--- a/index.html
+++ b/index.html
@@ -36,6 +36,72 @@
   <div class="hero hero--home"></div>
 
   <div class="content content--store">
+    <!-- Stickers -->
+    <h1 class="shop-header">
+      Stickers
+      <button class="shop-button button--smooth button--small">View More</button>
+    </h1>
+
+    <div class="shop-item" id="paddles">
+      <a class="card is-selectable" href="http://etsy.me/2ulyQLY" target="_blank">
+        <div class="img"></div>
+      </a>
+      <div class="card-title">
+        <span class="shop-item--title"><p>Paddles</p></span>
+        <p class="shop-item--price">$4</p>
+      </div>
+    </div>
+
+    <div class="shop-item" id="bb8">
+      <a class="card is-selectable" href="http://etsy.me/2pYVZhH" target="_blank">
+        <div class="img"></div>
+      </a>
+      <div class="card-title">
+        <span class="shop-item--title"><p>BB8</p></span>
+        <p class="shop-item--price">$5</p>
+      </div>
+    </div>
+
+    <div class="shop-item" id="k2so">
+      <a class="card is-selectable" href="http://etsy.me/2gukd0m" target="_blank">
+        <div class="img"></div>
+      </a>
+      <div class="card-title">
+        <span class="shop-item--title"><p>K2-SO</p></span>
+        <p class="shop-item--price">$5</p>
+      </div>
+    </div>
+
+    <div class="shop-item" id="r2d2">
+      <a class="card is-selectable" href="http://etsy.me/2pvB5d1" target="_blank">
+        <div class="img"></div>
+      </a>
+      <div class="card-title">
+        <span class="shop-item--title"><p>R2D2</p></span>
+        <p class="shop-item--price">$5</p>
+      </div>
+    </div>
+
+    <div class="shop-item" id="classic">
+      <a class="card is-selectable" href="http://etsy.me/2mHFG61" target="_blank">
+        <div class="img"></div>
+      </a>
+      <div class="card-title">
+        <span class="shop-item--title"><p>AirPod Classic</p></span>
+        <p class="shop-item--price">$3</p>
+      </div>
+    </div>
+
+    <div class="shop-item" id="apple-gum">
+      <a class="card is-selectable" href="http://etsy.me/2nHcah5" target="_blank">
+        <div class="img"></div>
+      </a>
+      <div class="card-title">
+        <span class="shop-item--title"><p>Apple Gum</p></span>
+        <p class="shop-item--price">$5</p>
+      </div>
+    </div>
+
     <!-- Vinyl Decals -->
     <h1 class="shop-header">
       Vinyl Decals
@@ -173,72 +239,6 @@
       </a>
       <div class="card-title">
         <span class="shop-item--title"><p>Pokémon</p></span>
-        <p class="shop-item--price">$5</p>
-      </div>
-    </div>
-
-    <!-- Stickers -->
-    <h1 class="shop-header">
-      Stickers
-      <button class="shop-button button--smooth button--small">View More</button>
-    </h1>
-
-    <div class="shop-item" id="bb8">
-      <a class="card is-selectable" href="http://etsy.me/2pYVZhH" target="_blank">
-        <div class="img"></div>
-      </a>
-      <div class="card-title">
-        <span class="shop-item--title"><p>BB8</p></span>
-        <p class="shop-item--price">$5</p>
-      </div>
-    </div>
-
-    <div class="shop-item" id="k2so">
-      <a class="card is-selectable" href="http://etsy.me/2gukd0m" target="_blank">
-        <div class="img"></div>
-      </a>
-      <div class="card-title">
-        <span class="shop-item--title"><p>K2-SO</p></span>
-        <p class="shop-item--price">$5</p>
-      </div>
-    </div>
-
-    <div class="shop-item" id="r2d2">
-      <a class="card is-selectable" href="http://etsy.me/2pvB5d1" target="_blank">
-        <div class="img"></div>
-      </a>
-      <div class="card-title">
-        <span class="shop-item--title"><p>R2D2</p></span>
-        <p class="shop-item--price">$5</p>
-      </div>
-    </div>
-
-    <div class="shop-item" id="classic">
-      <a class="card is-selectable" href="http://etsy.me/2mHFG61" target="_blank">
-        <div class="img"></div>
-      </a>
-      <div class="card-title">
-        <span class="shop-item--title"><p>AirPod Classic</p></span>
-        <p class="shop-item--price">$3</p>
-      </div>
-    </div>
-
-    <div class="shop-item" id="apple-gum">
-      <a class="card is-selectable" href="http://etsy.me/2nHcah5" target="_blank">
-        <div class="img"></div>
-      </a>
-      <div class="card-title">
-        <span class="shop-item--title"><p>Apple Gum</p></span>
-        <p class="shop-item--price">$5</p>
-      </div>
-    </div>
-
-    <div class="shop-item" id="namastay">
-      <a class="card is-selectable" href="https://www.stickermule.com/marketplace/16228-namastay-in-bed" target="_blank">
-        <div class="img"></div>
-      </a>
-      <div class="card-title">
-        <span class="shop-item--title"><p>Namast'ay in bed</p></span>
         <p class="shop-item--price">$5</p>
       </div>
     </div>
