added first modal

--- a/index.html
+++ b/index.html
@@ -51,12 +51,20 @@
     </h1>
 
     <div class="shop-item" id="paddles">
-      <a class="card is-selectable" href="http://etsy.me/2ulyQLY" target="_blank">
+      <a class="card is-selectable" id="button--paddle">
         <div class="img"></div>
       </a>
       <div class="card-title">
         <span class="shop-item--title"><p>Paddles</p></span>
         <p class="shop-item--price">$4</p>
+      </div>
+
+      <!-- Modal content -->
+      <div id="modal--paddle" class="modal modal--product">
+        <div class="modal-content">
+          <button id="close--paddle" class="button button--gray button--smooth modal-close">&times;</button>
+          <div id="modal-content--paddle"></div>
+        </div>
       </div>
     </div>
 
