--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
 </head>
 
 <body class="white-background">
+
+  <div id="modal-container">
+    <div class="modal-background">
+      <div class="modal">
+        <h2>I'm a Modal</h2>
+        <p>Hear me roar.</p>
+        <svg class="modal-svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" preserveAspectRatio="none">
+  				<rect x="0" y="0" fill="none" width="226" height="162" rx="3" ry="3"></rect>
+  			</svg>
+      </div>
+    </div>
+  </div>
+
   <header class="header">
     <div class="row">
       <a href="../" class="header--logo"></a>
@@ -69,12 +82,20 @@
     </div>
 
     <div class="shop-item" id="love-all">
-      <a class="card is-selectable" href="#" target="_blank">
+      <a class="card is-selectable" id="button--love-all">
         <div class="img"></div>
       </a>
       <div class="card-title">
         <span class="shop-item--title"><p>Love All</p></span>
         <p class="shop-item--price">$4</p>
+      </div>
+
+      <!-- Modal content -->
+      <div id="modal--love-all" class="modal modal--product">
+        <div class="modal-content">
+          <button id="close--love-all" class="button button--gray button--smooth modal-close">&times;</button>
+          <div id="modal-content--love-all"></div>
+        </div>
       </div>
     </div>
 
