--- a/index.html
+++ b/index.html
@@ -99,6 +99,16 @@
       </div>
     </div>
 
+    <div class="shop-item" id="us-open">
+      <a class="card is-selectable" href="https://www.etsy.com/516Design/listing/556444971/were-open-sticker?utm_source=Copy&utm_medium=ListingManager&utm_campaign=Share&utm_term=so.lmsm&share_time=1504760349971" target="_blank">
+        <div class="img"></div>
+      </a>
+      <div class="card-title">
+        <span class="shop-item--title"><p>We're Open</p></span>
+        <p class="shop-item--price">$4</p>
+      </div>
+    </div>
+
     <div class="shop-item" id="bb8">
       <a class="card is-selectable" href="http://etsy.me/2pYVZhH" target="_blank">
         <div class="img"></div>
@@ -126,16 +136,6 @@
       <div class="card-title">
         <span class="shop-item--title"><p>R2D2</p></span>
         <p class="shop-item--price">$5</p>
-      </div>
-    </div>
-
-    <div class="shop-item" id="classic">
-      <a class="card is-selectable" href="http://etsy.me/2mHFG61" target="_blank">
-        <div class="img"></div>
-      </a>
-      <div class="card-title">
-        <span class="shop-item--title"><p>AirPod Classic</p></span>
-        <p class="shop-item--price">$3</p>
       </div>
     </div>
 
