--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,900" rel="stylesheet">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -20,6 +21,8 @@
   ga('send', 'pageview');
 
 </script>
+<script src="scripts/paralax.js"></script>
+
 </head>
 
 <body class="white-background">
@@ -64,8 +67,9 @@
     </h1>
 
     <div class="shop-item" id="paddles">
-      <a class="card is-selectable" id="button--paddle">
-        <div class="img"></div>
+      <a class="atvImg" id="button--paddle">
+        <img src='http://516design.com/img/shop/paddles.svg'>
+        <div class='atvImg-layer' data-img='http://516design.com/img/shop/paddles.svg'></div>
       </a>
       <div class="card-title">
         <span class="shop-item--title"><p>Paddles</p></span>
