--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </div>
 
     <div class="shop-item" id="florida-fins">
-      <a class="atvImg" href="http://etsy.me/2pYVZhH" target="_blank">
+      <a class="atvImg" href="http://etsy.me/2A2Cw4K" target="_blank">
         <img src='img/shop/image--florida-fins.png'>
         <div class='atvImg-layer' data-img='img/shop/image--florida-fins.png'></div>
       </a>
@@ -127,7 +127,7 @@
     </div>
 
     <div class="shop-item" id="lets-go-fishing">
-      <a class="atvImg" href="http://etsy.me/2pYVZhH" target="_blank">
+      <a class="atvImg" href="http://etsy.me/2yhgXzT" target="_blank">
         <img src='img/shop/image--lets-go-fishing.png'>
         <div class='atvImg-layer' data-img='img/shop/image--lets-go-fishing.png'></div>
       </a>
