added image styles

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     </div>
   </div>
 
+  <div class="hero hero--home"></div>
+
   <header class="header">
     <div class="row">
       <a href="../" class="header--logo"></a>
@@ -49,191 +51,143 @@
     </div>
   </header>
 
-  <div class="hero hero--home"></div>
-
   <div class="content content--store">
     <!-- Stickers -->
-    <h1 class="shop-header">
-      Stickers
-      <!-- <button id="button--sticker" class="button shop-button button--smooth button--small">View More</button> -->
+    <h1 class="shop-header"><span class="icon--sticker"></span>Stickers</h1>
 
-      <!-- Modal content -->
-      <div id="modal--sticker" class="modal">
-        <div class="modal-content">
-          <button class="button button--gray button--smooth modal-sticker-close">&times;</button>
-          <div id="modal-content--sticker"></div>
+
+    <a class="shop-item" href="https://www.etsy.com/listing/549629485/you-win-some-you-lose-some-sticker" target="_blank">
+      <div class="shop-item-inner">
+        <img src='img/stickers/stickerpaddles.png'>
+        <div class="card-title">
+          <span class="shop-item--title"><p>Paddles</p></span>
+          <p class="shop-item--price">$4</p>
         </div>
       </div>
-    </h1>
+    </a>
 
-    <div class="shop-item" id="paddles">
-      <a class="atvImg" id="button--paddle">
-        <img src='img/shop/image--paddles.png'>
-        <div class='atvImg-layer' data-img='img/shop/image--paddles.png'></div>
-      </a>
-      <div class="card-title">
-        <span class="shop-item--title"><p>Paddles</p></span>
-        <p class="shop-item--price">$4</p>
-      </div>
-
-      <!-- Modal content -->
-      <div id="modal--paddle" class="modal modal--product">
-        <div class="modal-content">
-          <button id="close--paddle" class="button button--gray button--smooth modal-close">&times;</button>
-          <div id="modal-content--paddle"></div>
+    <a class="shop-item" href="https://www.etsy.com/listing/539044638/love-all-sticker" target="_blank">
+      <div class="shop-item-inner">
+        <img src='img/stickers/stickerlove-all.png'>
+        <div class="card-title">
+          <span class="shop-item--title"><p>Love All</p></span>
+          <p class="shop-item--price">$4</p>
         </div>
       </div>
-    </div>
+    </a>
 
-    <div class="shop-item" id="love-all">
-      <a class="atvImg" id="button--love-all">
-        <img src='img/shop/image--love-all.png'>
-        <div class='atvImg-layer' data-img='img/shop/image--love-all.png'></div>
-      </a>
-      <div class="card-title">
-        <span class="shop-item--title"><p>Love All</p></span>
-        <p class="shop-item--price">$4</p>
-      </div>
-
-      <!-- Modal content -->
-      <div id="modal--love-all" class="modal modal--product">
-        <div class="modal-content">
-          <button id="close--love-all" class="button button--gray button--smooth modal-close">&times;</button>
-          <div id="modal-content--love-all"></div>
+    <a class="shop-item" href="https://www.etsy.com/listing/261707426/star-wars-inspired-bb8-vinyl-sticker" target="_blank">
+      <div class="shop-item-inner">
+        <img src='img/stickers/stickerbb8.png'>
+        <div class="card-title">
+          <span class="shop-item--title"><p>BB8</p></span>
+          <p class="shop-item--price">$5</p>
         </div>
       </div>
-    </div>
+    </a>
 
-    <div class="shop-item" id="bb8">
-      <a class="atvImg" href="http://etsy.me/2pYVZhH" target="_blank">
-        <img src='img/shop/image--bb8.png'>
-        <div class='atvImg-layer' data-img='img/shop/image--bb8.png'></div>
-      </a>
-      <div class="card-title">
-        <span class="shop-item--title"><p>BB8</p></span>
-        <p class="shop-item--price">$5</p>
+    <a class="shop-item" href="https://www.etsy.com/listing/565801601/florida-fins-sticker" target="_blank">
+      <div class="shop-item-inner">
+        <img src='img/stickers/stickerflorida-fins.png'>
+        <div class="card-title">
+          <span class="shop-item--title"><p>Florida Fins</p></span>
+          <p class="shop-item--price">$4</p>
+        </div>
       </div>
-    </div>
+    </a>
 
-    <div class="shop-item" id="florida-fins">
-      <a class="atvImg" href="http://etsy.me/2A2Cw4K" target="_blank">
-        <img src='img/shop/image--florida-fins.png'>
-        <div class='atvImg-layer' data-img='img/shop/image--florida-fins.png'></div>
-      </a>
-      <div class="card-title">
-        <span class="shop-item--title"><p>Florida Fins</p></span>
-        <p class="shop-item--price">$4</p>
+    <a class="shop-item" href="https://www.etsy.com/listing/554433702/lets-go-fishing-sticker" target="_blank">
+      <div class="shop-item-inner">
+        <img src='img/stickers/stickerlets-go-fishing.png'>
+        <div class="card-title">
+          <span class="shop-item--title"><p>Let's Go Fishing</p></span>
+          <p class="shop-item--price">$4</p>
+        </div>
       </div>
-    </div>
+    </a>
 
-    <div class="shop-item" id="lets-go-fishing">
-      <a class="atvImg" href="http://etsy.me/2yhgXzT" target="_blank">
-        <img src='img/shop/image--lets-go-fishing.png'>
-        <div class='atvImg-layer' data-img='img/shop/image--lets-go-fishing.png'></div>
-      </a>
-      <div class="card-title">
-        <span class="shop-item--title"><p>Let's Go Fishing</p></span>
-        <p class="shop-item--price">$4</p>
+    <a class="shop-item" href="https://www.etsy.com/listing/616385408/bass-box-sticker" target="_blank">
+      <div class="shop-item-inner">
+        <img src='img/stickers/stickerbass-box.png'>
+        <div class="card-title">
+          <span class="shop-item--title"><p>Bass Box</p></span>
+          <p class="shop-item--price">$4</p>
+        </div>
       </div>
-    </div>
-
-    <div class="shop-item" id="k2so">
-      <a class="card is-selectable" href="http://etsy.me/2gukd0m" target="_blank">
-        <div class="img"></div>
-      </a>
-      <div class="card-title">
-        <span class="shop-item--title"><p>K2-SO</p></span>
-        <p class="shop-item--price">$5</p>
-      </div>
-    </div>
+    </a>
 
   </div>
 
-  <div class="section section--review">
-    <div class="row">
-      <div class="column--full">
-        <h1 class="section-header section-flex">Reviews</h1>
-      </div>
-    </div>
-    <div class="flex-row">
-      <div class="card card--review">
-        <div class="review-image instagram_lizelleg"></div>
-        <div class="card--content">
-          <p class="review-author text-instagram"><a href="https://www.instagram.com/lizelleg/" target="_blank">@lizelleg</a></p>
-          <p class="review-text">Making my Friday workday even better. Thank you <span class="text-instagram"><a href="https://www.instagram.com/explore/tags/516design/" target="_blank">#516design</a> <a href="https://www.instagram.com/explore/tags/r2d2love/" target="_blank">#r2d2love</a> <a href="https://www.instagram.com/explore/tags/starwars/" target="_blank">#starwars</a> <a href="https://www.instagram.com/explore/tags/gooddesign/" target="_blank">#gooddesign</a></span></p>
-        </div>
-        <div class="card--footer">
-          <a class="review-link" href="https://www.instagram.com/p/BEgy_HYQ63z/" target="_blank">
-            <i class="link-logo instagram-logo"></i>
-            Instagram
-          </a>
-        </div>
-      </div>
+  <!-- Tshirt -->
+  <div class="content content--store">
+    <h1 class="shop-header"><span class="icon--tshirt"></span>T-Shirts</h1>
 
-      <div class="card card--review">
-        <div class="review-image instagram_shekira"></div>
-        <div class="card--content">
-          <p class="review-author text-instagram"><a href="https://www.instagram.com/shekira/" target="_blank">@shekira</a></p>
-          <p class="review-text">I started a system in college of naming my hard drives after famous villains, robots, or computers. This drive is BB-8 and I splurged on a decal. Now I'm compelled to decal them all! <span class="text-instagram"><a href="https://www.instagram.com/explore/tags/de516n/" target="_blank">#de516n</a> <a href="https://www.instagram.com/explore/tags/lacie/" target="_blank">#lacie</a> <a href="https://www.instagram.com/explore/tags/bb8/" target="_blank">#bb8</a> <a href="https://www.instagram.com/explore/tags/nerdphotographer/" target="_blank">#nerdphotographer</a></span></p>
-        </div>
-        <div class="card--footer">
-          <a class="review-link" href="https://www.instagram.com/p/BK3l0vTjN43/" target="_blank">
-            <i class="link-logo instagram-logo"></i>
-            Instagram
-          </a>
+    <a class="shop-item" href="https://cottonbureau.com/products/loon-lover" target="_blank">
+      <div class="shop-item-inner">
+        <img src='img/shirt/tshirtloon-lover.png'>
+        <div class="card-title">
+          <span class="shop-item--title"><p>Loon Lover</p></span>
+          <p class="shop-item--price">$25</p>
         </div>
       </div>
+    </a>
 
-      <div class="card card--review">
-        <div class="review-image twitter_coryclubb"></div>
-        <div class="card--content">
-          <p class="review-author text-twitter"><a href="https://twitter.com/coryclubb" target="_blank">@coryclubb</a></p>
-          <p class="review-text">K-2SO ready for his mission! Thanks <span class="text-twitter"><a href="https://twitter.com/JaredRauh" target="_blank">@JaredRauh</a> <a href="https://twitter.com/DE516N" target="_blank">#RogueOne</a> <a href="https://twitter.com/DE516N" target="_blank">#2daysaway</a></span></p>
-        </div>
-        <div class="card--footer">
-          <a class="review-link" href="https://twitter.com/coryclubb/status/808720345901449216" target="_blank">
-            <i class="link-logo twitter-logo"></i>
-            Twitter
-          </a>
+    <a class="shop-item" href="https://cottonbureau.com/products/florida-fins" target="_blank">
+      <div class="shop-item-inner">
+        <img src='img/shirt/tshirtfins.png'>
+        <div class="card-title">
+          <span class="shop-item--title"><p>Florida Fins</p></span>
+          <p class="shop-item--price">$28</p>
         </div>
       </div>
+    </a>
 
-      <div class="card card--review">
-        <div class="review-image twitter_uxjw"></div>
-        <div class="card--content">
-          <p class="review-author text-twitter"><a href="https://twitter.com/uxjw" target="_blank">@uxjw</a></p>
-          <p class="review-text">Finally found a good spot for the BB-8 decal from <span class="text-twitter"><a href="https://twitter.com/DE516N" target="_blank">@DE516N</a></span></p>
-        </div>
-        <div class="card--footer">
-          <a class="review-link" href="https://twitter.com/uxjw/status/804920428107997184" target="_blank">
-            <i class="link-logo twitter-logo"></i>
-            Twitter
-          </a>
+    <a class="shop-item" href="https://cottonbureau.com/products/love-all" target="_blank">
+      <div class="shop-item-inner">
+        <img src='img/shirt/tshirtlove-all.png'>
+        <div class="card-title">
+          <span class="shop-item--title"><p>Love All</p></span>
+          <p class="shop-item--price">$28</p>
         </div>
       </div>
+    </a>
 
-      <div class="card card--review">
-        <div class="review-image twitter_aliabbasjaffri"></div>
-        <div class="card--content">
-          <p class="review-author text-twitter"><a href="https://twitter.com/aliabbasjaffri_" target="_blank">@aliabbasjaffri_</a></p>
-          <p class="review-text"><span class="text-twitter"><a href="https://twitter.com/DE516N" target="_blank">@DE516N</a></span> I received these today! Superb quality. And thank you <span class="text-twitter"><a href="https://twitter.com/DE516N" target="_blank">@DE516N</a></span> for the free gift sticker :-D </p>
-        </div>
-        <div class="card--footer">
-          <a class="review-link" href="https://twitter.com/aliabbasjaffri_/status/787000920802484225" target="_blank">
-            <i class="link-logo twitter-logo"></i>
-            Twitter
-          </a>
+    <a class="shop-item" href="https://cottonbureau.com/products/lets-go-fishing" target="_blank">
+      <div class="shop-item-inner">
+        <img src='img/shirt/tshirtlets-go-fishing.png'>
+        <div class="card-title">
+          <span class="shop-item--title"><p>Let's Go Fishing</p></span>
+          <p class="shop-item--price">$28</p>
         </div>
       </div>
-    </div>
+    </a>
+
+    <a class="shop-item" href="https://cottonbureau.com/products/you-win-some-you-lose-some" target="_blank">
+      <div class="shop-item-inner">
+        <img src='img/shirt/tshirtpaddles.png'>
+        <div class="card-title">
+          <span class="shop-item--title"><p>Paddles</p></span>
+          <p class="shop-item--price">$28</p>
+        </div>
+      </div>
+    </a>
+
+    <a class="shop-item" href="https://cottonbureau.com/products/fredbird" target="_blank">
+      <div class="shop-item-inner">
+        <img src='img/shirt/tshirtfredbird.png'>
+        <div class="card-title">
+          <span class="shop-item--title"><p>Fredbird</p></span>
+          <p class="shop-item--price">$26</p>
+        </div>
+      </div>
+    </a>
+
   </div>
 
   <footer class="column">
-    <p>&copy;2017 516Design</p>
+    <p>&copy;2018 516 Design</p>
   </footer>
   <script src="scripts/scripts.js"></script>
-
-  <script src="scripts/paralax.js"></script>
 
 </body>
 </html>
