added social icons

--- a/index.html
+++ b/index.html
@@ -184,8 +184,16 @@
 
   </div>
 
-  <footer class="column">
-    <p>&copy;2018 516 Design</p>
+  <footer>
+    <div class="row">
+      <div class="column column--full space-between">
+        <span class="social-icons">
+          <a href="https://www.instagram.com/de516n/" target="_blank" class="social-icon--instagram"></a>
+          <a href="https://dribbble.com/jaredrauh" target="_blank" class="social-icon--dribbble"></a>
+        </span>
+        <p>&copy;2018 516 Design</p>
+      </div>
+    </div>
   </footer>
   <script src="scripts/scripts.js"></script>
 
