changed image link names

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <a class="shop-item" href="https://www.etsy.com/listing/549629485/you-win-some-you-lose-some-sticker" target="_blank">
       <div class="shop-item-inner">
-        <img src='img/stickers/stickerpaddles.png'>
+        <img src='img/stickers/sticker_paddles.png'>
         <div class="card-title">
           <span class="shop-item--title"><p>Paddles</p></span>
           <p class="shop-item--price">$4</p>
@@ -68,7 +68,7 @@
 
     <a class="shop-item" href="https://www.etsy.com/listing/539044638/love-all-sticker" target="_blank">
       <div class="shop-item-inner">
-        <img src='img/stickers/stickerlove-all.png'>
+        <img src='img/stickers/sticker_love-all.png'>
         <div class="card-title">
           <span class="shop-item--title"><p>Love All</p></span>
           <p class="shop-item--price">$4</p>
@@ -78,7 +78,7 @@
 
     <a class="shop-item" href="https://www.etsy.com/listing/261707426/star-wars-inspired-bb8-vinyl-sticker" target="_blank">
       <div class="shop-item-inner">
-        <img src='img/stickers/stickerbb8.png'>
+        <img src='img/stickers/sticker_bb8.png'>
         <div class="card-title">
           <span class="shop-item--title"><p>BB8</p></span>
           <p class="shop-item--price">$5</p>
@@ -88,7 +88,7 @@
 
     <a class="shop-item" href="https://www.etsy.com/listing/565801601/florida-fins-sticker" target="_blank">
       <div class="shop-item-inner">
-        <img src='img/stickers/stickerflorida-fins.png'>
+        <img src='img/stickers/sticker_florida-fins.png'>
         <div class="card-title">
           <span class="shop-item--title"><p>Florida Fins</p></span>
           <p class="shop-item--price">$4</p>
@@ -98,7 +98,7 @@
 
     <a class="shop-item" href="https://www.etsy.com/listing/554433702/lets-go-fishing-sticker" target="_blank">
       <div class="shop-item-inner">
-        <img src='img/stickers/stickerlets-go-fishing.png'>
+        <img src='img/stickers/sticker_lets-go-fishing.png'>
         <div class="card-title">
           <span class="shop-item--title"><p>Let's Go Fishing</p></span>
           <p class="shop-item--price">$4</p>
@@ -108,7 +108,7 @@
 
     <a class="shop-item" href="https://www.etsy.com/listing/616385408/bass-box-sticker" target="_blank">
       <div class="shop-item-inner">
-        <img src='img/stickers/stickerbass-box.png'>
+        <img src='img/stickers/sticker_bass-box.png'>
         <div class="card-title">
           <span class="shop-item--title"><p>Bass Box</p></span>
           <p class="shop-item--price">$4</p>
@@ -124,7 +124,7 @@
 
     <a class="shop-item" href="https://cottonbureau.com/products/loon-lover" target="_blank">
       <div class="shop-item-inner">
-        <img src='img/shirt/tshirtloon-lover.png'>
+        <img src='img/shirt/tshirt_loon-lover.png'>
         <div class="card-title">
           <span class="shop-item--title"><p>Loon Lover</p></span>
           <p class="shop-item--price">$25</p>
@@ -134,7 +134,7 @@
 
     <a class="shop-item" href="https://cottonbureau.com/products/florida-fins" target="_blank">
       <div class="shop-item-inner">
-        <img src='img/shirt/tshirtfins.png'>
+        <img src='img/shirt/tshirt_fins.png'>
         <div class="card-title">
           <span class="shop-item--title"><p>Florida Fins</p></span>
           <p class="shop-item--price">$28</p>
@@ -144,7 +144,7 @@
 
     <a class="shop-item" href="https://cottonbureau.com/products/love-all" target="_blank">
       <div class="shop-item-inner">
-        <img src='img/shirt/tshirtlove-all.png'>
+        <img src='img/shirt/tshirt_love-all.png'>
         <div class="card-title">
           <span class="shop-item--title"><p>Love All</p></span>
           <p class="shop-item--price">$28</p>
@@ -154,7 +154,7 @@
 
     <a class="shop-item" href="https://cottonbureau.com/products/lets-go-fishing" target="_blank">
       <div class="shop-item-inner">
-        <img src='img/shirt/tshirtlets-go-fishing.png'>
+        <img src='img/shirt/tshirt_lets-go-fishing.png'>
         <div class="card-title">
           <span class="shop-item--title"><p>Let's Go Fishing</p></span>
           <p class="shop-item--price">$28</p>
@@ -164,7 +164,7 @@
 
     <a class="shop-item" href="https://cottonbureau.com/products/you-win-some-you-lose-some" target="_blank">
       <div class="shop-item-inner">
-        <img src='img/shirt/tshirtpaddles.png'>
+        <img src='img/shirt/tshirt_paddles.png'>
         <div class="card-title">
           <span class="shop-item--title"><p>Paddles</p></span>
           <p class="shop-item--price">$28</p>
@@ -174,7 +174,7 @@
 
     <a class="shop-item" href="https://cottonbureau.com/products/fredbird" target="_blank">
       <div class="shop-item-inner">
-        <img src='img/shirt/tshirtfredbird.png'>
+        <img src='img/shirt/tshirt_fredbird.png'>
         <div class="card-title">
           <span class="shop-item--title"><p>Fredbird</p></span>
           <p class="shop-item--price">$26</p>
