added two column mobile layout

--- a/guide/index.html
+++ b/guide/index.html
@@ -24,7 +24,7 @@
     <div class="row">
       <a href="../" class="header--logo"></a>
       <ul class="nav">
-        <li><a href="../" class="nav--item">Home</a></li>
+        <li><a href="../" class="nav--item">Shop</a></li>
         <li><a href="./" class="nav--item is-active">Guide</a></li>
       </ul>
     </div>
