--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="row">
       <a href="../" class="header--logo"></a>
       <ul class="nav">
-        <li><a href="./" class="nav--item is-active">Home</a></li>
+        <li><a href="./" class="nav--item is-active">Shop</a></li>
         <li><a href="./guide/" class="nav--item">Guide</a></li>
       </ul>
     </div>
